stop skills cards animation overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ h2 {
     grid-template-columns: 1fr 1fr;
   }
   .sectionDiv {
-    margin: 7.5rem auto;
+    margin: 10rem auto;
   }
   .introText {
     margin-top: 2rem;
